--- a/styles/main.css
+++ b/styles/main.css
@@ -152,24 +152,46 @@
   width: 100%;
   height: 100%;
 }
-.video .container {
+.video .video-overlay {
+  text-align: center;
   position: absolute;
-  top: 50%;
+  width: 80%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
+}
+.video .play-button {
+  outline: none;
+  border: none;
+  background: none;
+  border-radius: 100px;
+  margin-top: 2rem;
 }
 
 .products-container {
-  display: grid;
-  grid-template-columns: 33rem;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  align-items: center;
+  align-content: center;
 }
 .products-container .product-item {
   position: relative;
+  overflow: hidden;
+  flex-basis: 100%;
 }
 .products-container .product-item img {
   width: 100%;
+  height: 100%;
+}
+.products-container .product-item::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(59, 59, 59, 0.5176470588);
 }
 .products-container .product-item .product-content {
   position: absolute;
@@ -177,33 +199,23 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .products-container .product-item .product-content .actions {
   display: grid;
-  grid-template-columns: 14rem 14rem;
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  font-size: 1.4rem;
-  color: #fff;
 }
 .products-container .product-item .product-content .actions li {
-  padding: 1rem 0.5rem;
+  background-color: orange;
   text-align: center;
-  background-color: #f68220;
+  padding: 0.5rem 1rem;
 }
 .products-container .product-item .product-content .title {
   color: #fff;
-}
-.products-container .product-item::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(51, 51, 51, 0.5411764706);
 }
 
 .start-now {
@@ -234,35 +246,70 @@
   flex-direction: column;
 }
 
-.footer-contact {
-  padding: 1rem 0;
+.catalog-container {
+  display: flex;
+  flex-direction: column;
 }
-.footer-contact .para {
+.catalog-container .catalog-item {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+.catalog-container .catalog-item .para {
+  text-align: justify;
+}
+.catalog-container .catalog-item:last-child {
+  margin-bottom: 0;
+}
+.catalog-container .catalog-item .catalog-item-image {
+  max-width: 100rem;
+  max-height: 562rem;
+}
+.catalog-container .catalog-item .catalog-item-image img {
+  height: 100%;
+  width: 100%;
+}
+
+.contact {
+  background-color: #fff;
+}
+.contact .para {
+  margin-top: 1rem;
   text-align: center;
 }
-.footer-contact .contact-us-buttons {
+.contact .contact-us-buttons {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
-  margin-top: 1rem;
+  margin-top: 3rem;
 }
-.footer-contact .contact-us-buttons li {
+.contact .contact-us-buttons li {
   width: 15.8rem;
   border: 2px solid;
 }
-.footer-contact .contact-us-buttons li a {
-  display: block;
+.contact .contact-us-buttons li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   padding: 0.5rem 1rem;
+  gap: 1rem;
   font-size: 1.6rem;
+}
+.contact .contact-us-buttons li a img {
+  height: 2rem;
+  width: 2rem;
 }
 
 .footer {
   background-color: #3b3b3b;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 .footer .footer-copyright {
   text-align: center;
@@ -270,36 +317,69 @@
 }
 .footer .footer-menu {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 2rem 0;
-  border-bottom: 1px solid #eee;
 }
 .footer .footer-menu li {
-  border-left: 2px solid #7b7b7b;
+  position: relative;
+  flex: 1;
+  text-align: center;
 }
-.footer .footer-menu li:last-child {
-  border: unset;
+.footer .footer-menu li:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0.2rem;
+  height: 100%;
+  background-color: #7b7b7b;
+}
+.footer .footer-menu li:last-child::after {
+  display: none;
 }
 .footer .footer-menu li a {
-  padding: 0 0.5rem;
+  display: block;
+  padding: 0.7rem;
   color: #fff;
+}
+.footer .divider {
+  margin-top: 5.8rem;
+}
+.footer .footer-copyright {
+  font-size: 1.2rem;
+  margin-top: 3.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
 }
 
 @media screen and (min-width: 576px) {
   .container {
     max-width: 54rem !important;
   }
-  .products-container .actions {
-    display: none;
+  .products-container .product-item .actions {
+    visibility: hidden;
+    opacity: 0;
+  }
+  .products-container .product-item:hover .actions {
+    visibility: visible;
+    opacity: 1;
   }
   .contact-us-buttons {
     flex-direction: row !important;
+  }
+  .footer-copyright {
+    font-size: 1.4rem;
   }
 }
 @media screen and (min-width: 992px) {
   .container {
     max-width: 72rem !important;
+  }
+  .product-item {
+    flex-basis: 50% !important;
   }
   .desktop-menu {
     display: flex !important;
@@ -309,6 +389,9 @@
   }
   .video-player {
     aspect-ratio: 16/9 !important;
+  }
+  .footer-copyright {
+    justify-content: space-between !important;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -331,8 +414,31 @@
   .video-player {
     aspect-ratio: 16/9 !important;
   }
+  .product-item {
+    flex-basis: 33.3333333333% !important;
+  }
+  .catalog-item-text {
+    position: absolute;
+    background-color: #fff;
+    width: 38rem;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 1.5rem 1.8rem;
+    right: 0;
+  }
+  .catalog-item:nth-child(odd) .catalog-item-image {
+    align-self: flex-end;
+  }
+  .catalog-item:nth-child(even) .catalog-item-text {
+    right: unset;
+    left: 0;
+  }
 }
 @media screen and (min-width: 1400px) {
+  .product-item {
+    width: 31.3333% !important;
+    margin-bottom: 30px;
+  }
   .container {
     max-width: 132rem !important;
   }
@@ -365,10 +471,14 @@ body {
   padding: 0 1.6rem;
 }
 
+.container-fluid {
+  max-width: 100%;
+  padding: 0 1.6rem !important;
+}
+
 .title {
   font-size: 2rem;
   text-align: center;
-  margin-bottom: 3.2rem;
 }
 
 .sub-title {
