--- a/styles/main/_catalogs.scss
+++ b/styles/main/_catalogs.scss
@@ -1,23 +1,27 @@
 .catalog-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+
   .catalog-item {
-    display: grid;
-    grid-template-columns: 33rem;
-    justify-content: center;
-    h3 {
-      font-size: 1.8rem;
-      color: #f68220;
-      margin: 1rem 0;
-    }
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    position: relative;
     .para {
       text-align: justify;
     }
-    .catalogs-item-image {
-      width: 100%;
-      aspect-ratio: 16/9;
-      background-color: #666;
+    margin-bottom: 1.5rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    .catalog-item-image {
+      max-width: 100rem;
+      max-height: 562rem;
+      img {
+        height: 100%;
+        width: 100%;
+      }
     }
   }
 }
