--- a/styles/main/_video.scss
+++ b/styles/main/_video.scss
@@ -5,10 +5,19 @@
     width: 100%;
     height: 100%;
   }
-  .container {
+  .video-overlay {
+    text-align: center;
     position: absolute;
-    top: 50%;
+    width: 80%;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
+  }
+  .play-button {
+    outline: none;
+    border: none;
+    background: none;
+    border-radius: 100px;
+    margin-top: 2rem;
   }
 }
