--- a/styles/header/_header.scss
+++ b/styles/header/_header.scss
@@ -61,9 +61,16 @@
     object-fit: cover;
   }
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+}
 .hero-text {
   text-align: center;
-  .title {
-    margin-bottom: 1.2rem;
-  }
 }
