--- a/styles/main.css
+++ b/styles/main.css
@@ -99,11 +99,20 @@
      object-fit: cover;
 }
 
-.hero-text {
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+  align-content: center;
+  justify-content: center;
   text-align: center;
 }
-.hero-text .title {
-  margin-bottom: 1.2rem;
+
+.hero-text {
+  text-align: center;
 }
 
 .articles .articles-container {
@@ -169,29 +178,33 @@
 }
 
 .products-container {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  align-content: center;
+  gap: 3rem;
 }
 .products-container .product-item {
   position: relative;
   overflow: hidden;
-  flex-basis: 100%;
+  cursor: pointer;
 }
 .products-container .product-item img {
   width: 100%;
   height: 100%;
+  transform: scale(1);
+  transition: all ease 0.5s;
 }
 .products-container .product-item::before {
   position: absolute;
   content: "";
   width: 100%;
   height: 100%;
-  top: 0;
   left: 0;
+  bottom: 0%;
+  transition: all ease 0.5s;
   background-color: rgba(59, 59, 59, 0.5176470588);
+  z-index: 1;
 }
 .products-container .product-item .product-content {
   position: absolute;
@@ -203,16 +216,19 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 }
 .products-container .product-item .product-content .actions {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
+  transition: all ease 0.5s;
 }
 .products-container .product-item .product-content .actions li {
   background-color: orange;
   text-align: center;
   padding: 0.5rem 1rem;
+  width: 14rem;
 }
 .products-container .product-item .product-content .title {
   color: #fff;
@@ -223,23 +239,24 @@
   padding: 4rem 0;
 }
 .start-now .title {
-  color: #f68220;
+  margin-top: 0;
 }
 .start-now .para {
   text-align: center;
+  margin-bottom: 3.2rem;
+  margin-top: 2.2rem;
 }
 .start-now a {
   text-decoration: none;
   border: 2px solid #000;
   padding: 5px 10px;
   font-size: 1.6rem;
-  margin-top: 1rem;
 }
 .start-now .start-now-content {
-  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.2901960784);
+  padding: 2rem 0;
   width: 90%;
   margin: 0 auto;
-  border: 1px solid #000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -364,8 +381,13 @@
     opacity: 0;
   }
   .products-container .product-item:hover .actions {
+    transition: all ease 0.5s;
     visibility: visible;
     opacity: 1;
+  }
+  .products-container .product-item:hover img {
+    transform: scale(1.4);
+    transition: all ease 0.5s;
   }
   .contact-us-buttons {
     flex-direction: row !important;
@@ -377,9 +399,6 @@
 @media screen and (min-width: 992px) {
   .container {
     max-width: 72rem !important;
-  }
-  .product-item {
-    flex-basis: 50% !important;
   }
   .desktop-menu {
     display: flex !important;
@@ -398,6 +417,12 @@
   .container {
     max-width: 114rem !important;
   }
+  .footer {
+    font-size: 1.6rem;
+  }
+  .footer .footer-copyright {
+    font-size: 1.6rem;
+  }
   .article-item {
     flex-direction: row !important;
     gap: 2rem;
@@ -413,9 +438,6 @@
   }
   .video-player {
     aspect-ratio: 16/9 !important;
-  }
-  .product-item {
-    flex-basis: 33.3333333333% !important;
   }
   .catalog-item-text {
     position: absolute;
@@ -435,10 +457,6 @@
   }
 }
 @media screen and (min-width: 1400px) {
-  .product-item {
-    width: 31.3333% !important;
-    margin-bottom: 30px;
-  }
   .container {
     max-width: 132rem !important;
   }
