--- a/styles/main/_products.scss
+++ b/styles/main/_products.scss
@@ -1,25 +1,30 @@
 .products-container {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  align-content: center;
+  gap: 3rem;
   .product-item {
     position: relative;
     overflow: hidden;
-    flex-basis: 100%;
+    cursor: pointer;
     img {
       width: 100%;
       height: 100%;
+      transform: scale(1);
+      transition: all ease 0.5s;
     }
+
     &::before {
       position: absolute;
       content: '';
       width: 100%;
       height: 100%;
-      top: 0;
       left: 0;
+      bottom: 0%;
+      transition: all ease 0.5s;
       background-color: #3b3b3b84;
+      z-index: 1;
     }
     .product-content {
       position: absolute;
@@ -31,15 +36,17 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-
+      z-index: 1;
       .actions {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
+        transition: all ease 0.5s;
         li {
           background-color: orange;
           text-align: center;
           padding: 0.5rem 1rem;
+          width: 14rem;
         }
       }
       .title {
