--- a/styles/main/_start-now.scss
+++ b/styles/main/_start-now.scss
@@ -2,23 +2,24 @@
   background-color: #cccc;
   padding: 4rem 0;
   .title {
-    color: #f68220;
+    margin-top: 0;
   }
   .para {
     text-align: center;
+    margin-bottom: 3.2rem;
+    margin-top: 2.2rem;
   }
   a {
     text-decoration: none;
     border: 2px solid #000;
     padding: 5px 10px;
     font-size: 1.6rem;
-    margin-top: 1rem;
   }
   .start-now-content {
-    padding: 1rem;
+    background-color: #ffffff4a;
+    padding: 2rem 0;
     width: 90%;
     margin: 0 auto;
-    border: 1px solid #000;
     display: flex;
     justify-content: center;
     align-items: center;
