--- a/styles/header/_header.scss
+++ b/styles/header/_header.scss
@@ -33,6 +33,16 @@
         width: 100%;
         text-decoration: none;
         color: #000;
+        position: relative;
+        &:hover::after {
+          position: absolute;
+          content: '';
+          width: 100%;
+          top: 2.8rem;
+          left: 0;
+          height: 5px;
+          background-color: #f68220;
+        }
       }
     }
   }
