--- a/styles/main/_articles.scss
+++ b/styles/main/_articles.scss
@@ -1,42 +1,43 @@
 .articles {
-  .articles-container {
-    display: flex;
-    flex-direction: column;
-    .article-item {
-      flex: 1;
-      flex-basis: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-      .sub-title {
-        margin-top: 1rem;
-      }
-      .para {
-        text-align: justify;
-      }
-      .article-item-image {
-        width: 100%;
-        aspect-ratio: 16/9;
-        background-color: #666;
-        overflow: hidden;
+  ul {
+    width: 100%;
+    list-style: none;
+    padding: 0;
+  }
 
-        img {
-          transform: scale(1) rotate(0deg);
-          transition: all ease 0.6s;
-          width: 100%;
-          height: 100%;
-        }
-
-        &:hover img {
-          transition: all ease 0.6s;
-          transform: scale(1.3) rotate(10deg);
-        }
-      }
+  li {
+    & > a {
+      height: 28.2rem;
+      display: block;
+      float: none;
+      position: relative;
+      // &::after {
+      //   position: absolute;
+      //   content: '';
+      //   left: 0;
+      //   top: 0;
+      //   height: 100%;
+      //   width: 100%;
+      //   background-color: #3f3f3f98;
+      //   transition: all ease 0.5s;
+      //   opacity: 0;
+      //   visibility: hidden;
+      // }
+      // &:hover::after {
+      //   visibility: visible;
+      //   opacity: 1;
+      // }
     }
-    .article-item:last-child {
-      margin-bottom: unset;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: relative;
     }
   }
 }
