--- a/styles/main/_products.scss
+++ b/styles/main/_products.scss
@@ -7,7 +7,6 @@
   .product-item {
     position: relative;
     overflow: hidden;
-    cursor: pointer;
     img {
       width: 100%;
       height: 100%;
@@ -52,6 +51,18 @@
       .title {
         color: #fff;
       }
+    }
+    .actions {
+      height: 0;
+      transition: all ease 0.5s;
+    }
+    &:hover .actions {
+      height: fit-content;
+      transition: all ease 0.5s;
+    }
+    &:hover img {
+      transform: scale(1.4);
+      transition: all ease 0.5s;
     }
   }
 }
