--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,11 +12,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
   list-style: none;
 }
 img {
-  display: block;
+  display: block !important;
 }
 a {
   text-decoration: none;
@@ -50,7 +50,11 @@ body {
   font-size: 1.8rem;
 }
 .section {
-  padding: 4rem 0;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.section.footer {
+  padding-bottom: 2rem;
 }
 .para {
   font-size: 1.6rem;
