--- a/styles/main/_articles.scss
+++ b/styles/main/_articles.scss
@@ -3,7 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  .title {
+    margin-bottom: 3.2rem;
+  }
   ul {
     width: 100%;
     list-style: none;
@@ -11,27 +13,53 @@
   }
 
   li {
+    margin-bottom: 3rem;
+    &:last-child {
+      margin-bottom: unset;
+    }
     & > a {
       height: 28.2rem;
       display: block;
       float: none;
       position: relative;
-      // &::after {
-      //   position: absolute;
-      //   content: '';
-      //   left: 0;
-      //   top: 0;
-      //   height: 100%;
-      //   width: 100%;
-      //   background-color: #3f3f3f98;
-      //   transition: all ease 0.5s;
-      //   opacity: 0;
-      //   visibility: hidden;
-      // }
-      // &:hover::after {
-      //   visibility: visible;
-      //   opacity: 1;
-      // }
+      margin-bottom: 1rem;
+      .sub-title {
+        margin-bottom: 0.2rem;
+      }
+      .plus {
+        position: absolute;
+        width: 4rem;
+        height: 4rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(0deg);
+        z-index: 1;
+        opacity: 0;
+        visibility: hidden;
+        display: block;
+        transition: all ease 0.6s;
+      }
+      &:hover .plus {
+        opacity: 1;
+        visibility: visible;
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #3f3f3f98;
+        transition: all ease 0.5s;
+        opacity: 0;
+        visibility: hidden;
+      }
+      &:hover::after {
+        visibility: visible;
+        opacity: 1;
+      }
     }
     img {
       width: 100%;
