--- a/styles/main/_contact-us.scss
+++ b/styles/main/_contact-us.scss
@@ -4,7 +4,7 @@
     margin-top: 1rem;
     text-align: center;
   }
-  .contact-us-buttons {
+  ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
