--- a/styles/_rwd.scss
+++ b/styles/_rwd.scss
@@ -6,8 +6,18 @@
   .contact-us-buttons {
     flex-direction: row !important;
   }
+  .products-container {
+    & > li {
+      width: 54rem !important;
+      height: 30.4rem !important;
+    }
+  }
+
   .footer-copyright {
     font-size: 1.4rem;
+  }
+  .hero-text {
+    text-align: right !important;
   }
 }
 @media screen and (min-width: 768px) {
@@ -23,8 +33,22 @@
   .mobile-menu {
     display: none !important;
   }
-  .video-player {
-    aspect-ratio: 16/9 !important;
+  .video {
+    height: 36rem;
+    .video-player {
+      aspect-ratio: 16/9 !important;
+    }
+  }
+  .products-container {
+    & > li {
+      width: 34.5rem !important;
+      height: 19.4rem !important;
+    }
+  }
+  .footer {
+    ul {
+      margin-bottom: 5.8rem;
+    }
   }
   .footer-copyright {
     justify-content: space-between !important;
@@ -38,6 +62,12 @@
     font-size: 1.6rem;
     .footer-copyright {
       font-size: 1.6rem;
+    }
+  }
+  .products-container {
+    & > li {
+      width: 46.5rem !important;
+      height: 26.2rem !important;
     }
   }
 
@@ -69,31 +99,55 @@
       }
     }
   }
-  .video-player {
-    aspect-ratio: 16/9 !important;
+  .video {
+    height: 40.8rem;
+    .video-player {
+      aspect-ratio: 16/9 !important;
+    }
   }
 
-  .catalog-item-text {
-    position: absolute;
-    background-color: #fff;
-    width: 38rem;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 1.5rem 1.8rem;
-    right: 0;
-  }
-  .catalog-item:nth-child(odd) .catalog-item-image {
-    align-self: flex-end;
-  }
-  .catalog-item:nth-child(even) .catalog-item-text {
-    right: unset;
-    left: 0;
+  .catalogs {
+    li {
+      img {
+        width: 84.2rem !important;
+        height: 47.4rem !important;
+        margin-right: auto;
+      }
+      div {
+        position: absolute;
+        background-color: #fff;
+        width: 38rem;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 1.8rem 2rem;
+        p {
+          margin-top: 0.8rem;
+        }
+        right: 0%;
+      }
+    }
+
+    li:nth-child(even) img {
+      margin: unset !important;
+    }
+    li:nth-child(even) div {
+      right: unset;
+      left: 0;
+    }
   }
 }
 
 @media screen and (min-width: 1400px) {
   .container {
-    max-width: 132rem !important;
+    max-width: 114rem !important;
+  }
+  .catalogs {
+    li {
+      img {
+        width: 100rem !important;
+        height: 56.2rem !important;
+      }
+    }
   }
   .articles-container {
     li {
@@ -103,8 +157,10 @@
       }
     }
   }
-  .product-item {
-    width: 36rem;
-    height: 20.2rem;
+  .products-container {
+    & > li {
+      width: 36rem !important;
+      height: 20.4rem !important;
+    }
   }
 }
