--- a/styles/header/_header.scss
+++ b/styles/header/_header.scss
@@ -2,7 +2,7 @@
   background-color: #fff;
   box-shadow: 0px 0px 5px 3px #75757575;
 }
-.nav-container {
+nav {
   height: 10rem;
   display: flex;
   justify-content: space-between;
@@ -81,6 +81,22 @@
   justify-content: center;
   text-align: center;
 }
-.hero-text {
-  text-align: center;
+.swiper-pagination-bullet {
+  border-radius: unset !important;
+  width: 0.6rem !important;
+  height: 4rem !important;
+  background-color: #fff !important;
+  opacity: 1 !important;
+}
+.swiper-pagination-bullet-active {
+  background-color: #f68220 !important;
+}
+.hero {
+  background-color: #fff;
+  .hero-text {
+    text-align: center;
+    .title {
+      margin-bottom: 1.2rem;
+    }
+  }
 }
