--- a/styles/main.css
+++ b/styles/main.css
@@ -45,38 +45,38 @@
   box-shadow: 0px 0px 5px 3px rgba(117, 117, 117, 0.4588235294);
 }
 
-.nav-container {
+nav {
   height: 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.nav-container .menu-icon img {
+nav .menu-icon img {
   height: 2.3rem;
   width: 2.4rem;
 }
-.nav-container .logo {
+nav .logo {
   height: 44px;
   width: 44px;
 }
-.nav-container img {
+nav img {
   height: 100%;
   width: 100%;
 }
-.nav-container .desktop-menu {
+nav .desktop-menu {
   display: none;
   align-items: center;
   font-size: 1.6rem;
   gap: 2rem;
 }
-.nav-container .desktop-menu li a {
+nav .desktop-menu li a {
   display: block;
   width: 100%;
   text-decoration: none;
   color: #000;
   position: relative;
 }
-.nav-container .desktop-menu li a:hover::after {
+nav .desktop-menu li a:hover::after {
   position: absolute;
   content: "";
   width: 100%;
@@ -85,7 +85,7 @@
   height: 5px;
   background-color: #f68220;
 }
-.nav-container .mobile-menu {
+nav .mobile-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -121,8 +121,26 @@
   text-align: center;
 }
 
-.hero-text {
+.swiper-pagination-bullet {
+  border-radius: unset !important;
+  width: 0.6rem !important;
+  height: 4rem !important;
+  background-color: #fff !important;
+  opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #f68220 !important;
+}
+
+.hero {
+  background-color: #fff;
+}
+.hero .hero-text {
   text-align: center;
+}
+.hero .hero-text .title {
+  margin-bottom: 1.2rem;
 }
 
 .articles {
@@ -131,16 +149,63 @@
   justify-content: center;
   align-items: center;
 }
+.articles .title {
+  margin-bottom: 3.2rem;
+}
 .articles ul {
   width: 100%;
   list-style: none;
   padding: 0;
+}
+.articles li {
+  margin-bottom: 3rem;
+}
+.articles li:last-child {
+  margin-bottom: unset;
 }
 .articles li > a {
   height: 28.2rem;
   display: block;
   float: none;
   position: relative;
+  margin-bottom: 1rem;
+}
+.articles li > a .sub-title {
+  margin-bottom: 0.2rem;
+}
+.articles li > a .plus {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  display: block;
+  transition: all ease 0.6s;
+}
+.articles li > a:hover .plus {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, -50%) rotate(360deg);
+}
+.articles li > a::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(63, 63, 63, 0.5960784314);
+  transition: all ease 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
+.articles li > a:hover::after {
+  visibility: visible;
+  opacity: 1;
 }
 .articles li img {
   width: 100%;
@@ -151,8 +216,11 @@
 }
 
 .video {
-  height: 30rem;
+  height: 34rem;
   position: relative;
+}
+.video .title {
+  margin-bottom: 2.2rem;
 }
 .video .video-player {
   width: 100%;
@@ -172,26 +240,35 @@
   background: none;
   border-radius: 100px;
   margin-top: 2rem;
+  cursor: pointer;
 }
 
-.products-container {
+.products * {
+  box-sizing: unset;
+}
+.products > .title {
+  margin-bottom: 3rem;
+}
+.products .products-container {
   position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 3rem;
 }
-.products-container .product-item {
+.products .products-container > li {
   position: relative;
   overflow: hidden;
+  width: 33rem;
+  height: 18.6rem;
 }
-.products-container .product-item img {
+.products .products-container > li img {
   width: 100%;
   height: 100%;
   transform: scale(1);
   transition: all ease 0.5s;
 }
-.products-container .product-item::before {
+.products .products-container > li::before {
   position: absolute;
   content: "";
   width: 100%;
@@ -202,7 +279,7 @@
   background-color: rgba(59, 59, 59, 0.5176470588);
   z-index: 1;
 }
-.products-container .product-item .product-content {
+.products .products-container > li div {
   position: absolute;
   top: 0;
   left: 0;
@@ -214,31 +291,38 @@
   flex-direction: column;
   z-index: 1;
 }
-.products-container .product-item .product-content .actions {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.products .products-container > li div .actions {
+  width: 30rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   gap: 1rem;
   transition: all ease 0.5s;
 }
-.products-container .product-item .product-content .actions li {
+.products .products-container > li div .actions li {
   background-color: orange;
   text-align: center;
-  padding: 0.5rem 1rem;
   width: 14rem;
 }
-.products-container .product-item .product-content .title {
+.products .products-container > li div .actions li a {
+  display: block;
+  padding: 0.5rem 1rem;
+}
+.products .products-container > li div .title {
   color: #fff;
 }
-.products-container .product-item .actions {
+.products .products-container > li .actions {
+  overflow: hidden;
   height: 0;
   transition: all ease 0.5s;
 }
-.products-container .product-item:hover .actions {
-  height: -moz-fit-content;
-  height: fit-content;
+.products .products-container > li:hover .actions {
+  height: 10rem;
   transition: all ease 0.5s;
 }
-.products-container .product-item:hover img {
+.products .products-container > li:hover img {
   transform: scale(1.4);
   transition: all ease 0.5s;
 }
@@ -247,56 +331,52 @@
   background-color: rgba(204, 204, 204, 0.8);
   padding: 4rem 0;
 }
-.start-now .title {
-  margin-top: 0;
-}
 .start-now .para {
   text-align: center;
   margin-bottom: 3.2rem;
   margin-top: 2.2rem;
 }
 .start-now a {
+  width: 15.8rem;
+  height: 4rem;
   text-decoration: none;
   border: 2px solid #000;
   padding: 5px 10px;
   font-size: 1.6rem;
+  text-align: center;
+  line-height: 2.5rem;
 }
 .start-now .start-now-content {
   background-color: rgba(255, 255, 255, 0.2901960784);
   padding: 2rem 0;
-  width: 90%;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.catalog-container {
+.catalogs .title {
+  margin-bottom: 3.2rem;
+}
+.catalogs ul {
   display: flex;
   flex-direction: column;
 }
-.catalog-container .catalog-item {
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
+.catalogs ul li {
   flex: 1;
   position: relative;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
 }
-.catalog-container .catalog-item .para {
+.catalogs ul li .para {
   text-align: justify;
 }
-.catalog-container .catalog-item:last-child {
+.catalogs ul li:last-child {
   margin-bottom: 0;
 }
-.catalog-container .catalog-item .catalog-item-image {
-  max-width: 100rem;
-  max-height: 562rem;
-}
-.catalog-container .catalog-item .catalog-item-image img {
+.catalogs ul li img {
   height: 100%;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .contact {
@@ -306,7 +386,7 @@
   margin-top: 1rem;
   text-align: center;
 }
-.contact .contact-us-buttons {
+.contact ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -314,11 +394,11 @@
   gap: 1.5rem;
   margin-top: 3rem;
 }
-.contact .contact-us-buttons li {
+.contact ul li {
   width: 15.8rem;
   border: 2px solid;
 }
-.contact .contact-us-buttons li a {
+.contact ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -327,7 +407,7 @@
   gap: 1rem;
   font-size: 1.6rem;
 }
-.contact .contact-us-buttons li a img {
+.contact ul li a img {
   height: 2rem;
   width: 2rem;
 }
@@ -339,41 +419,44 @@
 }
 .footer .footer-copyright {
   text-align: center;
-  padding: 2rem 0;
 }
-.footer .footer-menu {
+.footer ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 3.8rem;
 }
-.footer .footer-menu li {
+.footer ul li {
   position: relative;
   flex: 1;
   text-align: center;
 }
-.footer .footer-menu li:after {
+.footer ul li:after {
   position: absolute;
   content: "";
-  top: 0;
+  top: 0.5rem;
   left: 0;
-  width: 0.2rem;
-  height: 100%;
+  width: 0.1rem;
+  height: 2.7rem;
   background-color: #7b7b7b;
 }
-.footer .footer-menu li:last-child::after {
+.footer ul li:last-child::after {
   display: none;
 }
-.footer .footer-menu li a {
+.footer ul li a {
   display: block;
   padding: 0.7rem;
   color: #fff;
 }
+.footer ul li a:hover {
+  color: #f68220;
+}
 .footer .divider {
-  margin-top: 5.8rem;
+  color: #ff0000;
 }
 .footer .footer-copyright {
   font-size: 1.2rem;
-  margin-top: 3.6rem;
+  margin-top: 2.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -388,8 +471,15 @@
   .contact-us-buttons {
     flex-direction: row !important;
   }
+  .products-container > li {
+    width: 54rem !important;
+    height: 30.4rem !important;
+  }
   .footer-copyright {
     font-size: 1.4rem;
+  }
+  .hero-text {
+    text-align: right !important;
   }
 }
 @media screen and (min-width: 992px) {
@@ -402,8 +492,18 @@
   .mobile-menu {
     display: none !important;
   }
-  .video-player {
+  .video {
+    height: 36rem;
+  }
+  .video .video-player {
     aspect-ratio: 16/9 !important;
+  }
+  .products-container > li {
+    width: 34.5rem !important;
+    height: 19.4rem !important;
+  }
+  .footer ul {
+    margin-bottom: 5.8rem;
   }
   .footer-copyright {
     justify-content: space-between !important;
@@ -418,6 +518,10 @@
   }
   .footer .footer-copyright {
     font-size: 1.6rem;
+  }
+  .products-container > li {
+    width: 46.5rem !important;
+    height: 26.2rem !important;
   }
   .articles-container ul {
     list-style: none;
@@ -444,48 +548,63 @@
     margin-left: 0;
     margin-right: 2rem;
   }
-  .video-player {
+  .video {
+    height: 40.8rem;
+  }
+  .video .video-player {
     aspect-ratio: 16/9 !important;
   }
-  .catalog-item-text {
+  .catalogs li img {
+    width: 84.2rem !important;
+    height: 47.4rem !important;
+    margin-right: auto;
+  }
+  .catalogs li div {
     position: absolute;
     background-color: #fff;
     width: 38rem;
     top: 50%;
     transform: translateY(-50%);
-    padding: 1.5rem 1.8rem;
-    right: 0;
+    padding: 1.8rem 2rem;
+    right: 0%;
   }
-  .catalog-item:nth-child(odd) .catalog-item-image {
-    align-self: flex-end;
+  .catalogs li div p {
+    margin-top: 0.8rem;
   }
-  .catalog-item:nth-child(even) .catalog-item-text {
+  .catalogs li:nth-child(even) img {
+    margin: unset !important;
+  }
+  .catalogs li:nth-child(even) div {
     right: unset;
     left: 0;
   }
 }
 @media screen and (min-width: 1400px) {
   .container {
-    max-width: 132rem !important;
+    max-width: 114rem !important;
+  }
+  .catalogs li img {
+    width: 100rem !important;
+    height: 56.2rem !important;
   }
   .articles-container li img {
     height: 28.2rem;
     width: 50rem;
   }
-  .product-item {
-    width: 36rem;
-    height: 20.2rem;
+  .products-container > li {
+    width: 36rem !important;
+    height: 20.4rem !important;
   }
 }
 * {
   margin: 0;
   padding: 0;
-  box-sizing: 0;
+  box-sizing: border-box;
   list-style: none;
 }
 
 img {
-  display: block;
+  display: block !important;
 }
 
 a {
@@ -525,7 +644,12 @@ body {
 }
 
 .section {
-  padding: 4rem 0;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.section.footer {
+  padding-bottom: 2rem;
 }
 
 .para {
