--- a/styles/main/_products.scss
+++ b/styles/main/_products.scss
@@ -1,68 +1,86 @@
-.products-container {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 3rem;
-  .product-item {
+.products {
+  * {
+    box-sizing: unset;
+  }
+  & > .title {
+    margin-bottom: 3rem;
+  }
+  .products-container {
     position: relative;
-    overflow: hidden;
-    img {
-      width: 100%;
-      height: 100%;
-      transform: scale(1);
-      transition: all ease 0.5s;
-    }
-
-    &::before {
-      position: absolute;
-      content: '';
-      width: 100%;
-      height: 100%;
-      left: 0;
-      bottom: 0%;
-      transition: all ease 0.5s;
-      background-color: #3b3b3b84;
-      z-index: 1;
-    }
-    .product-content {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 1;
-      .actions {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3rem;
+    & > li {
+      position: relative;
+      overflow: hidden;
+      width: 33rem;
+      height: 18.6rem;
+      img {
+        width: 100%;
+        height: 100%;
+        transform: scale(1);
         transition: all ease 0.5s;
-        li {
-          background-color: orange;
-          text-align: center;
-          padding: 0.5rem 1rem;
-          width: 14rem;
+      }
+
+      &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        bottom: 0%;
+        transition: all ease 0.5s;
+        background-color: #3b3b3b84;
+        z-index: 1;
+      }
+      div {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 1;
+        .actions {
+          width: 30rem;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+          gap: 1rem;
+          transition: all ease 0.5s;
+          li {
+            background-color: orange;
+            text-align: center;
+            width: 14rem;
+            a {
+              display: block;
+              padding: 0.5rem 1rem;
+            }
+          }
+        }
+        .title {
+          color: #fff;
         }
       }
-      .title {
-        color: #fff;
+      .actions {
+        overflow: hidden;
+        height: 0;
+        transition: all ease 0.5s;
       }
-    }
-    .actions {
-      height: 0;
-      transition: all ease 0.5s;
-    }
-    &:hover .actions {
-      height: fit-content;
-      transition: all ease 0.5s;
-    }
-    &:hover img {
-      transform: scale(1.4);
-      transition: all ease 0.5s;
+      &:hover .actions {
+        height: 10rem;
+        transition: all ease 0.5s;
+      }
+      &:hover img {
+        transform: scale(1.4);
+        transition: all ease 0.5s;
+      }
     }
   }
 }
